# SillyTextEncoder

./: .clang-tidy  .clang-tidy-example  .gitignore  CMakeLists.txt  vcpkg.json
src/app/: CMakeLists.txt  main.cpp
src/lib1/: CMakeLists.txt  lib_example.cpp  lib_example.cppm
tests/: CMakeLists.txt  example_tests.cpp
